<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/add_icon"
        android:title="@string/add_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@mipmap/sort_icon"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item android:title="@string/time_up"
                android:id="@+id/action_time_up"
                    />
                <item android:title="@string/time_down"
                    android:id="@+id/action_time_down"
                    />
                <item android:title="@string/views"
                    android:id="@+id/action_views"
                    />
            </group>
        </menu>
    </item>
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>